# zuse-neat

./: .dir-locals.el  .gitmodules  .ninja_deps  .ninja_log  .tmuxinator.yml  CMakeLists.txt  README.org  ZuseNEAT.srctrldb  ZuseNEAT.srctrlprj  build.ninja  rules.ninja
app/: CMakeLists.txt
app/src/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/headers/: critter.h  neat.h  neuron.h  population.h
engine/include/: DL_Basics.h  README.org  critter.h  neat.h  neuron.h  population.h  shared-critter-loader.h
engine/src/: README.org  critter.cpp  neat.cpp  neuron.cpp  population.cpp
examples/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
